--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
-  "name": "node-js-getting-started",
+  "name": "leanengine-nodejs-demos",
   "version": "1.0.0",
   "private": true,
-  "description": "A sample Node.js app using Express",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js -- "
+    "test": "mocha"
   },
   "dependencies": {
-    "body-parser": "1.12.3",
-    "connect-timeout": "^1.7.0",
-    "cookie-parser": "^1.3.5",
-    "ejs": "2.5.7",
-    "express": "4.12.3",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.12.2",
+    "captchapng": "0.0.1",
+    "connect-timeout": "^1.9.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "ejs": "^2.5.7",
+    "express": "^4.12.3",
+    "express-ws": "^3.0.0",
+    "gm": "1.22.0",
+    "ioredis": "^3.2.2",
+    "jade": "^1.9.2",
     "leancloud-storage": "^3.0.0",
-    "leanengine": "^3.0.0"
+    "leanengine": "leancloud/leanengine-node-sdk#cloud-queue",
+    "moment": "^2.13.0",
+    "underscore": "^1.8.3",
+    "wechat": "^2.1.0",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "should": "^11.2.0",
+    "supertest": "^3.0.0",
+    "supertest-as-promised": "^4.0.2"
   },
   "engines": {
-    "node": "8.x"
+    "node": "6.x"
   }
 }
